--- a/Source/Core/VideoCommon/CMakeLists.txt
+++ b/Source/Core/VideoCommon/CMakeLists.txt
@@ -15,6 +15,7 @@ set(SRCS	AsyncRequests.cpp
 			HiresTextures.cpp
 			ImageWrite.cpp
 			IndexGenerator.cpp
+			LightingShaderGen.cpp
 			MainBase.cpp
 			OnScreenDisplay.cpp
 			OpcodeDecoding.cpp
