HybridXFB: Also add support to DirectX 11

--- a/Source/Core/VideoBackends/D3D/D3D.vcxproj.filters
+++ b/Source/Core/VideoBackends/D3D/D3D.vcxproj.filters
@@ -48,9 +48,6 @@
     <ClCompile Include="Render.cpp">
       <Filter>Render</Filter>
     </ClCompile>
-    <ClCompile Include="Television.cpp">
-      <Filter>Render</Filter>
-    </ClCompile>
     <ClCompile Include="TextureCache.cpp">
       <Filter>Render</Filter>
     </ClCompile>
@@ -65,6 +62,9 @@
     </ClCompile>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="BoundingBox.cpp">
+      <Filter>Render</Filter>
+    </ClCompile>
+    <ClCompile Include="AbstractTexture.cpp">
       <Filter>Render</Filter>
     </ClCompile>
   </ItemGroup>
@@ -103,9 +103,6 @@
       <Filter>Render</Filter>
     </ClInclude>
     <ClInclude Include="Render.h">
-      <Filter>Render</Filter>
-    </ClInclude>
-    <ClInclude Include="Television.h">
       <Filter>Render</Filter>
     </ClInclude>
     <ClInclude Include="TextureCache.h">
