Vulkan: Implement GPU texture conversion

--- a/Source/Core/VideoBackends/Vulkan/Vulkan.vcxproj
+++ b/Source/Core/VideoBackends/Vulkan/Vulkan.vcxproj
@@ -53,6 +53,7 @@
     <ClCompile Include="FramebufferManager.cpp" />
     <ClCompile Include="Helpers.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PaletteTextureConverter.cpp" />
     <ClCompile Include="StaticShaderCache.cpp" />
     <ClCompile Include="TextureEncoder.cpp" />
     <ClCompile Include="Util.cpp" />
@@ -73,6 +74,7 @@
     <ClInclude Include="FramebufferManager.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Helpers.h" />
+    <ClInclude Include="PaletteTextureConverter.h" />
     <ClInclude Include="StaticShaderCache.h" />
     <ClInclude Include="TextureEncoder.h" />
     <ClInclude Include="Util.h" />
