--- a/Source/Core/VideoBackends/Vulkan/CMakeLists.txt
+++ b/Source/Core/VideoBackends/Vulkan/CMakeLists.txt
@@ -3,6 +3,8 @@ set(SRCS
 	FramebufferManager.cpp
 	Helpers.cpp
 	ObjectCache.cpp
+	PaletteTextureConverter.cpp
+	RasterFont.cpp
 	Renderer.cpp
 	ShaderCache.cpp
 	StateTracker.cpp
@@ -11,6 +13,7 @@ set(SRCS
 	SwapChain.cpp
 	Texture2D.cpp
 	TextureCache.cpp
+	TextureEncoder.cpp
 	Util.cpp
 	VertexFormat.cpp
 	VertexManager.cpp
@@ -24,7 +27,9 @@ set(LIBS
 )
 
 # Flagged as a system include to silence warnings
+# TODO: Clean this up and make consistent with rest of build system
 include_directories(SYSTEM ${CMAKE_SOURCE_DIR}/Externals/Vulkan/Include)
+include_directories(SYSTEM ${CMAKE_SOURCE_DIR}/Externals/glslang)
 include_directories(SYSTEM ${CMAKE_SOURCE_DIR}/Externals/glslang/glslang/Include)
 include_directories(SYSTEM ${CMAKE_SOURCE_DIR}/Externals/glslang/SPIRV)
 
