Vulkan: Only use x11-xcb with USE_X11 is set

--- a/Source/Core/VideoBackends/Vulkan/CMakeLists.txt
+++ b/Source/Core/VideoBackends/Vulkan/CMakeLists.txt
@@ -35,4 +35,10 @@ include_directories(SYSTEM ${CMAKE_SOURCE_DIR}/Externals/glslang/SPIRV)
 
 add_dolphin_library(videovulkan "${SRCS}" "${LIBS}")
 
-target_link_libraries(videovulkan glslang X11-xcb)
+# TODO: Better integrate this.
+if(USE_X11)
+	target_link_libraries(videovulkan glslang X11-xcb)
+else()
+	target_link_libraries(videovulkan glslang)
+endif()
+
