--- a/Data/Sys/GameSettings/GM8E01.ini
+++ b/Data/Sys/GameSettings/GM8E01.ini
@@ -1,132 +1,2 @@
-# GM8E01 - Metroid Prime
+# GM8E01 - Metroid Prime USA
 # also extracted Metroid Prime 1 demo or extracted Metroid Prime 2 bonus disc
-
-[OnLoad]
-# Add memory patches to be loaded once on boot here.
-
-[OnFrame]
-# Add memory patches to be applied every frame here.
-
-[ActionReplay]
-# Add action replay cheats here.
-$This Code Must Be On
-043CB1A8 3C808000
-043CB1AC 93E4183C
-043CB1B0 809F0008
-043CB1B4 4BDE05A8
-041AB758 4821FA50
-$Infinite Health
-04049EA8 48000104
-$Infinite Missiles
-4200183C 002500FF
-4200183C 002700FF
-$Infinite Balls
-00457D1B 00000003
-$Infinite Power Balls
-4200183C 00310003
-$Moonjump (Hold B)
-0A7A55A4 00000200
-0446BABC 41200000
-$Play NES Metroid
-0A7A55A4 00000440
-0001CA64 00000041
-0A7A55A4 00000840
-0001CA64 00000040
-$Have Ice Beam
-4200183C 001B0001
-$Have Wave Beam
-4200183C 001F0001
-$Have Plasma Beam
-4200183C 00230001
-$Have Phazon Beam
-70458245 00000080
-087A55A9 000000C5
-00458245 0000007C
-48457D33 00000000
-087A55A9 0000003B
-00458245 000000FE
-$Have Morph Ball
-4200183C 00570001
-$Have Boost Ball
-4200183C 005F0001
-$Have Spider Ball (break)
-4200183C 00630001
-$Have Morph Ball Bomb
-4200183C 002F0001
-$Have Power Bomb
-4200183C 00330001
-$Have Varia Suit
-4200183C 006F0001
-$Have Gravity Suit (break)
-4200183C 00670001
-4200183C 006B0001
-$Have Phazon Suit (break)
-4200183C 00730001
-$Have Combat Visor
-4200183C 005B0001
-$Have Scan Visor
-4200183C 002B0001
-$Have X-Ray Visor
-4200183C 004B0001
-$Have Thermal Visor
-4200183C 003B0001
-$Have Space Jump Boots
-4200183C 00510001
-4200183C 00530001
-$Have Grapple Beam
-4200183C 00470001
-$Have Missile Launcher
-4200183C 00260001
-$Have Charge Beam
-4200183C 003F0001
-$Have Beam Combo A
-4200183C 00370001
-$Have Beam Combo B
-4200183C 00430001
-$Have Beam Combo C
-4200183C 004F0001
-$Disable Culling of Terrain Outside Camera View
-043451D0 38600001
-043451D4 4E800020
-$Disable Culling of Special Functions Outside Camera View
-04344FCC 38600001
-04344FD0 4E800020
-$Disable Culling of Wallcrawler Swarms Outside Camera View
-0434502C 38600001
-04345030 4E800020
-$Disable Culling of Particles Outside Camera View
-04345188 38600001
-0434518C 4E800020
-$Disable Culling of Unknown Outside Camera View
-04345098 38600001
-0434509C 4E800020
-$DEMO Disable Culling of Terrain Outside Camera View
-042A2DD4 38600001
-042A2DD8 4E800020
-$DEMO Disable Culling of Special Functions Outside Camera View
-042A2CC0 38600001
-042A2CC4 4E800020
-$DEMO Disable Culling of Wallcrawler Swarms Outside Camera View
-042A2D20 38600001
-042A2D24 4E800020
-$DEMO Disable Culling of Particles Outside Camera View
-04345188 38600001
-0434518C 4E800020
-$MP2 BONUS Disable Culling of Terrain Outside Camera View
-042B7F4C 38600001
-042B7F50 4E800020
-$MP2 BONUS Disable Culling of Special Functions Outside Camera View
-042B7D4C 38600001
-042B7D50 4E800020
-$MP2 BONUS Disable Culling of Wallcrawler Swarms Outside Camera View
-042B7DAC 38600001
-042B7DB0 4E800020
-$MP2 BONUS Disable Culling of Particles Outside Camera View
-042B7F04 38600001
-042B7F08 4E800020
-$MP2 BONUS Disable Culling of Unknown Outside Camera View
-042B7E18 38600001
-042B7E1C 4E800020
-
-[Speedhacks]
-0x80384b1c=400
