Fix Metroid Prime 1 scale. Also rate versions without culling codes.

--- a/Data/Sys/GameSettings/GM8.ini
+++ b/Data/Sys/GameSettings/GM8.ini
@@ -25,6 +25,7 @@ SafeTextureCacheColorSamples = 512
 EFBCopyEnable = True
 
 [VR]
+UnitsPerMetre = 1.5
 MetroidPrime = 1
 VRStateId = 5
 VRIssues = Enable cheats and action replay codes to disable culling
