--- a/Data/Sys/GameSettings/GM8E01r1.ini
+++ b/Data/Sys/GameSettings/GM8E01r1.ini
@@ -1,8 +1,5 @@
-# GM8J01 - Metroid Prime Japan
+# GM8E01 r1 - Metroid Prime USA 1.01
 
 [VR]
 VRStateId = 4
 VRIssues = Culling. Use USA 1.00, USA 1.02, or PAL instead.
-
-[Speedhacks]
-0x803708f8=400
