--- a/Data/Sys/GameSettings/GM8E01r2.ini
+++ b/Data/Sys/GameSettings/GM8E01r2.ini
@@ -1,4 +1,4 @@
-# GM8E01r2 - Metroid Prime USA 1.02
+# GM8E01 r2 - Metroid Prime Player's Choice USA 1.02
 
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
