--- a/Data/Sys/GameSettings/R3IJ01.ini
+++ b/Data/Sys/GameSettings/R3IJ01.ini
@@ -1,4 +1,4 @@
-# R3IJ01 - Metroid Prime 1 New Play Control
+# R3IJ01 - Metroid Prime 1 New Play Control Japan
 
 [Core]
 # Values set here will override the main dolphin settings.
@@ -29,6 +29,7 @@ PH_ZFar =
 [Video_Hacks]
 
 [VR]
+UnitsPerMetre = 1.5
 MetroidPrime = 31
 VRStateId = 3
 VRIssues = Enable cheats and action replay codes to disable culling
