--- a/Data/Sys/GameSettings/R3M.ini
+++ b/Data/Sys/GameSettings/R3M.ini
@@ -22,6 +22,7 @@ EFBToTextureEnable = False
 EFBCopyEnable = True
 
 [VR]
+UnitsPerMetre = 1.5
 MetroidPrime = 30
 VRStateId = 2
 CanReadCameraAngles = True
