Fix Metroid Prime 2 scale, intro FMV, Prime 1 visor dirt, and Prime 3 beta title

--- a/Data/Sys/GameSettings/G2M.ini
+++ b/Data/Sys/GameSettings/G2M.ini
@@ -28,6 +28,7 @@ EFBCopyEnable = True
 EFBToTextureEnable = False
 
 [VR]
+UnitsPerMetre = 1.6
 HudDistance = 5.200000
 MetroidPrime = 2
 VRStateId = 5
