--- a/Data/Sys/GameSettings/G2MEAB.ini
+++ b/Data/Sys/GameSettings/G2MEAB.ini
@@ -8,6 +8,7 @@
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
 EmulationStateId = 1
 EmulationIssues = REALRAM_SIZE must be set to 0x8000000
+Title = Metroid Prime 3 E3 Beta
 
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
