--- a/Data/Sys/GameSettings/P2ME01.ini
+++ b/Data/Sys/GameSettings/P2ME01.ini
@@ -18,6 +18,7 @@ $MP2 BONUS Disable Culling of Unknown Outside Camera View
 042B7E1C 4E800020
 
 [VR]
+UnitsPerMetre = 1.6
 MetroidPrime = 2
 VRStateId = 5
 VRIssues = Enable cheats and action replay codes to disable culling
