--- a/Data/Sys/GameSettings/R32J01.ini
+++ b/Data/Sys/GameSettings/R32J01.ini
@@ -1,4 +1,4 @@
-# R32J01 - Metroid Prime 2 Dark Echoes New Play Control
+# R32J01 - Metroid Prime 2 Dark Echoes New Play Control (Japan)
 
 [Core]
 # Values set here will override the main dolphin settings.
@@ -29,6 +29,7 @@ PH_ZFar =
 [Video_Hacks]
 
 [VR]
+UnitsPerMetre = 1.6
 MetroidPrime = 32
 VRStateId = 2
 CanReadCameraAngles = True
