F-Zero X (N64) default settings

--- a/Data/Sys/GameSettings/NAF.ini
+++ b/Data/Sys/GameSettings/NAF.ini
@@ -20,3 +20,19 @@ EmulationIssues = Needs EFB to Ram to fix a bar of stretched pixels at the botto
 [Video_Hacks]
 EFBToTextureEnable = False
 EFBCopyEnable = True
+
+[Video_Hacks_VR]
+EFBToTextureEnable = False
+EFBCopyEnable = False
+EFBAccessEnable = False
+
+[Video_Settings_VR]
+UseXFB = False
+
+[VR]
+UnitsPerMetre = 10.0
+CameraPitch = 60.0
+ScreenHeight = 2.1
+ScreenThickness = 100.0
+VRStateId = 2
+VRIssues = projection is weird, background is weird, HUD doesn't line up
