Fix N64 Virtual Console games with pre-transformed vertices. Fixes issue #96
You now need to specify the horizontal FOV for Nintendo 64 games.

--- a/Data/Sys/GameSettings/NAF.ini
+++ b/Data/Sys/GameSettings/NAF.ini
@@ -1,4 +1,4 @@
-# NAFE01, NAFP01 - F-Zero X
+# NAFE01, NAFP01 - F-Zero X (N64)
 
 [Core]
 # Values set here will override the main Dolphin settings.
@@ -32,7 +32,9 @@ UseXFB = False
 [VR]
 UnitsPerMetre = 10.0
 CameraPitch = 60.0
+HudDistance = 2.0
+HudThickness = 100.0
 ScreenHeight = 2.1
 ScreenThickness = 100.0
-VRStateId = 2
-VRIssues = projection is weird, background is weird, HUD doesn't line up
+VRStateId = 3
+VRIssues = background is weird
