Cruis'n USA, Kirby 64, and Star Fox 64

--- a/Data/Sys/GameSettings/NAD.ini
+++ b/Data/Sys/GameSettings/NAD.ini
@@ -1,4 +1,4 @@
-# NADE01, NADJ01, NADK01 - Star Fox 64 (Virtual Console)
+# NADE01, NADJ01, NADK01 - Star Fox 64: Lylat Wars (Virtual Console)
 
 [Core]
 # Values set here will override the main Dolphin settings.
@@ -19,3 +19,12 @@ EmulationIssues =
 
 [Video_Stereoscopy]
 StereoConvergence = 354
+
+[VR]
+UnitsPerMetre = 13.0
+HudDistance = 35.0
+HudThickness = 100.0
+N64FOV = 45.0
+ScreenDistance = 1.6
+VRStateId = 3
+VRIssues = planet at wrong depth, inconsistent scale
