--- a/Data/Sys/GameSettings/NAM.ini
+++ b/Data/Sys/GameSettings/NAM.ini
@@ -18,8 +18,10 @@ EmulationIssues =
 # Add action replay cheats here.
 
 [VR]
-VRStateId = 2
-VRIssues = The perspective of the game is skewed making it barely playable.
+UnitsPerMetre = 100.000000
+N64FOV = 50.0000000
+VRStateId = 3
+VRIssues = Use hide object codes. The perspective is still slightly skewed. Flashing sky.
 
 [HideObjectCodes]
 $VR - Hide HUD Outside Ring
