More N64 games: Sin and Punishment, Mario Tennis, Ogre Battle 64, OoT, Paper Mario, Yoshi's Story, Wave Race 64, Pokemon Snap, SSB, Pokemon Puzzle League
Most of these games still have issues, but I've created default settings for them.

--- a/Data/Sys/GameSettings/NAC.ini
+++ b/Data/Sys/GameSettings/NAC.ini
@@ -17,3 +17,19 @@ EmulationStateId = 3
 [ActionReplay]
 # Add action replay cheats here.
 
+[HideObjectCodes]
+$hud black border
+128bits:0x0000000000000000:0x0000000043A00000
+$letterbox top
+128bits:0x0000000000000000:0x0000000000000000
+$letterbox bottom
+128bits:0x0000000043500000:0x0000000000000000
+
+[VR]
+UnitsPerMetre = 32.0000000
+HudDistance = 2.09999990
+HudThickness = 100.000000
+N64FOV = 77.0000000
+ScreenThickness = 100.000000
+VRStateId = 2
+VRIssues = black polygons, mix of 2D and 3D, sky issues
