--- a/Data/Sys/GameSettings/NAE.ini
+++ b/Data/Sys/GameSettings/NAE.ini
@@ -1,4 +1,4 @@
-# NAEE01, NAEP01 - Paper Mario
+# NAEE01, NAEP01 - Paper Mario (N64)
 
 [Core]
 # Values set here will override the main Dolphin settings.
@@ -26,3 +26,15 @@ EFBCopyEnable = True
 
 [Video_Stereoscopy]
 StereoConvergence = 506
+
+[HideObjectCodes]
+$black hud border
+128bits:0x0000000000000000:0x0000000043A00000
+
+[VR]
+UnitsPerMetre = 500.0
+HudThickness = 500.0
+N64FOV = 37.0
+HudDistance = 1.4
+VRStateId = 3
+VRIssues = use hide object codes, black flashing, flashing background, bad sky/dialog depth, sometimes dark characters
