--- a/Data/Sys/GameSettings/NAH.ini
+++ b/Data/Sys/GameSettings/NAH.ini
@@ -13,6 +13,14 @@ EmulationIssues =
 [Video_Settings]
 SafeTextureCacheColorSamples = 0
 
+[HideObjectCodes]
+$black hud border
+128bits:0x0000000000000000:0x0000000043A00000
+
 [VR]
-VRStateId = 2
+UnitsPerMetre = 32.0
+HudDistance = 10.4
+HudThickness = 500.0
+ScreenThickness = 500.0
+VRStateId = 3
 VRIssues = Most of the game is rendered as a 2D texture making it unsuitable for VR.
