--- a/Data/Sys/GameSettings/NAI.ini
+++ b/Data/Sys/GameSettings/NAI.ini
@@ -17,6 +17,13 @@ EmulationIssues =
 [ActionReplay]
 # Add action replay cheats here.
 
+[HideObjectCodes]
+$black hud border
+128bits:0x0000000000000000:0x0000000043A00000
+
 [VR]
-VRStateId = 2
-VRIssues = The perspective of the game is skewed making it barely playable.
+UnitsPerMetre = 64.0000000
+N64FOV = 120.000000
+VRStateId = 1
+VRIssues = Black polygons
+ScreenThickness = 500.000000
