--- a/Data/Sys/GameSettings/NAL.ini
+++ b/Data/Sys/GameSettings/NAL.ini
@@ -20,6 +20,15 @@ EmulationIssues =
 [Video_Stereoscopy]
 StereoConvergence = 5000
 
+[HideObjectCodes]
+$efb
+96bits:0x0000000000000000:0x0000000000000000
+$sky
+32bits:0x0000000000000000:0x0000000041200000
+
 [VR]
-VRStateId = 2
-VRIssues = The perspective of the game is skewed making it barely playable.
+UnitsPerMetre = 500.0
+HudDistance = 3.6
+N64FOV = 56.0
+VRStateId = 3
+VRIssues = use hide object codes, flickering black on the HUD
