--- a/Data/Sys/GameSettings/NAN.ini
+++ b/Data/Sys/GameSettings/NAN.ini
@@ -1,4 +1,4 @@
-# NANE01 - Pokémon Puzzle League
+﻿# NANE01 - Pokémon Puzzle League (N64)
 
 [Core]
 # Values set here will override the main Dolphin settings.
@@ -17,3 +17,6 @@ EmulationIssues =
 [ActionReplay]
 # Add action replay cheats here.
 
+[VR]
+VRStateId = 1
+VRIssues = black flashing polygons
