Update Nintendo 64 game settings

--- a/Data/Sys/GameSettings/NAI.ini
+++ b/Data/Sys/GameSettings/NAI.ini
@@ -17,13 +17,9 @@ EmulationIssues =
 [ActionReplay]
 # Add action replay cheats here.
 
-[HideObjectCodes]
-$black hud border
-128bits:0x0000000000000000:0x0000000043A00000
-
 [VR]
-UnitsPerMetre = 64.0000000
-N64FOV = 120.000000
-VRStateId = 1
-VRIssues = Black polygons
-ScreenThickness = 500.000000
+UnitsPerMetre = 38.0
+N64FOV = 85.0
+ScreenThickness = 500.0
+VRStateId = 2
+VRIssues = flashing backgrounds, takes a LONG time to load
