--- a/Data/Sys/GameSettings/NAK.ini
+++ b/Data/Sys/GameSettings/NAK.ini
@@ -22,12 +22,10 @@ EFBToTextureEnable = False
 EFBCopyEnable = True
 
 [HideObjectCodes]
-$black hud border
-128bits:0x0000000000000000:0x0000000043A00000
 $hud garbage
 64bits:0x0000000000000000:0x0000000000000000
 
 [VR]
 UnitsPerMetre = 128.0
 VRStateId = 2
-VRIssues = use hide object codes, black flashing polygons, inconsistent FOV, inconsistent scale
+VRIssues = use hide object codes, inconsistent FOV, inconsistent scale
