--- a/Data/Sys/GameSettings/NAN.ini
+++ b/Data/Sys/GameSettings/NAN.ini
@@ -17,6 +17,10 @@ EmulationIssues =
 [ActionReplay]
 # Add action replay cheats here.
 
+[HideObjectCodes]
+$efb copies
+32bits:0x0000000000000000:0x0000000000000000
+
 [VR]
-VRStateId = 1
-VRIssues = black flashing polygons
+VRStateId = 3
+VRIssues = use hide object codes, some missing backgrounds, 2D
