--- a/Data/Sys/GameSettings/NAR.ini
+++ b/Data/Sys/GameSettings/NAR.ini
@@ -17,3 +17,17 @@ EmulationIssues = Very buggy
 [ActionReplay]
 # Add action replay cheats here.
 
+[HideObjectCodes]
+$letterbox top
+128bits:0x0000000000000000:0x0000000000000000
+$letterbox bottom
+128bits:0x0000000043500000:0x0000000000000000
+
+[VR]
+UnitsPerMetre = 32.0
+HudDistance = 2.1
+HudThickness = 100.0
+N64FOV = 77.0
+ScreenThickness = 100.0
+VRStateId = 3
+VRIssues = sky issues
