--- a/Data/Sys/GameSettings/NAS.ini
+++ b/Data/Sys/GameSettings/NAS.ini
@@ -1,7 +1,11 @@
 # NASE01 - Cruis'n USA
 
+[HideObjectCodes]
+$hall of mirrors
+128bits:0x0000000000000000:0x0000000000000000
+
 [VR]
-UnitsPerMetre = 50.0000000
-N64FOV = 50.0000000
-VRStateId = 2
+UnitsPerMetre = 50.0
+N64FOV = 50.0
+VRStateId = 3
 VRIssues = flashing sky
