--- a/Data/Sys/GameSettings/NAT.ini
+++ b/Data/Sys/GameSettings/NAT.ini
@@ -5,8 +5,8 @@ $efb copy
 32bits:0x0000000000000000:0x0000000000000000
 
 [VR]
-UnitsPerMetre = 10.0
+UnitsPerMetre = 12.0
 CameraPitch = 18.0
 N64FOV = 20.0
-VRStateId = 1
-VRIssues = black flashing polygons, shadow stuck to face, unplayable
+VRStateId = 3
+VRIssues = shadow stuck to face
