House of the Dead 2 & 3 default settings, fixes issue #54 & #55
House of the Dead 3 still requires tweaking the settings.

--- a/Data/Sys/GameSettings/RHD.ini
+++ b/Data/Sys/GameSettings/RHD.ini
@@ -17,7 +17,21 @@ EmulationIssues =
 [ActionReplay]
 # Add action replay cheats here.
 
+[HideObjectCodes]
+$HOTD2 efb copy
+128bits:0xFFFFFFFF00000001:0xFFFF000100000000
+$HOTD2 letterbox (causes flashing)
+128bits:0x0000000101010202:0x0203030361400000
+$HOTD2 letterbox 2 (causes flashing)
+128bits:0x0000000101010202:0x0203030361F33D00
+
 [VR]
-UnitsPerMetre = 95.396324
-CameraForward = 3.899999
-CameraPitch = 37.500000
+UnitsPerMetre = 10.0
+CameraForward = 0.0
+HudOnTop = True
+CanReadCameraAngles = True
+HudDistance = 3.0
+CameraPitch = 0.0
+AimDistance = 3.0
+VRStateId = 3
+VRIssues = hide object codes sort of work, tiny launcher menu, settings are for HOTD2
