House of the Dead: Overkill default settings, fixes issue #73

--- a/Data/Sys/GameSettings/RHO.ini
+++ b/Data/Sys/GameSettings/RHO.ini
@@ -11,3 +11,24 @@ EmulationIssues =
 [ActionReplay]
 [Video_Hacks]
 EFBEmulateFormatChanges = True
+
+[HideObjectCodes]
+$main efb copy
+112bits:0x0000C3A00000C380:0x0000000000008034
+$medium efb copy
+104bits:0x00000000000000C3:0x8000000000000080
+$small efb copy
+128bits:0x00000000C3000000:0x00000000803476B0
+$tiny efb copy
+128bits:0x00000000C2800000:0x00000000803476B0
+$letterbox top
+128bits:0xC3AA000041F00000:0x0000000000000000
+$letterbox bottom
+128bits:0xC3AA000042480000:0x0000000000000000
+
+[VR]
+UnitsPerMetre = 100.0
+HudDistance = 3.0
+AimDistance = 3.0
+VRStateId = 3
+VRIssues = use hide object codes, camera angles, efb copy on muzzle flash
