Wiiware games default settings: World of Goo, Sonic 4 Episode 1, Dr. Mario Online Rx

--- a/Data/Sys/GameSettings/WDM.ini
+++ b/Data/Sys/GameSettings/WDM.ini
@@ -21,11 +21,7 @@ EmulationIssues =
 ProjectionHack = 0
 
 [VR]
-UnitsPerMetre = 850.563660
-HudDistance = 2.000000
-
-[HideObjectCodes]
-$1st Set of 16:9 Bars
-32bits:0x0000000000000000:0x0000000000C3A000
-$2nd Set of 16:9 Bars
-64bits:0x0000000000000000:0x00000000000A0000
+UnitsPerMetre = 7.0
+MinFOV = 45.0
+VRStateId = 3
+VRIssues = inconsistent scale
