--- a/Data/Sys/GameSettings/WGO.ini
+++ b/Data/Sys/GameSettings/WGO.ini
@@ -17,3 +17,13 @@ EmulationIssues =
 [ActionReplay]
 # Add action replay cheats here.
 
+[HideObjectCodes]
+$bottom letterbox
+40bits:0x0000000000000000:0x0000000000000043
+$top letterbox
+72bits:0x0000000000000000:0x000000429E00003E
+
+[VR]
+ScreenDistance = 1.6
+VRStateId = 3
+VRIssues = culling, 2D, inconsistent depth
