--- a/Data/Sys/GameSettings/WSN.ini
+++ b/Data/Sys/GameSettings/WSN.ini
@@ -17,3 +17,9 @@ EmulationIssues =
 [ActionReplay]
 # Add action replay cheats here.
 
+[VR]
+UnitsPerMetre = 0.2
+HudDistance = 3.0
+HudThickness = 9.2
+VRStateId = 3
+VRIssues = culling, inconsistent depth, efb on water, mostly 2D
