Lego Star Wars III: The Clone Wars default settings

--- a/Data/Sys/GameSettings/SC4.ini
+++ b/Data/Sys/GameSettings/SC4.ini
@@ -19,3 +19,15 @@ EmulationIssues =
 
 [Video_Hacks]
 
+[HideObjectCodes]
+$EFB copy
+96bits:0x0000000000000000:0x0000000000000000
+
+[VR]
+UnitsPerMetre = 7.4
+HudDistance = 0.44
+HudThickness = 0.0
+CameraForward = -0.4
+HudOnTop = True
+VRStateId = 3
+VRIssues = use hide object codes, chains on HUD, culling, mild flashing
