Fix Super Mario Galaxy being upside down. Fixes issue #66.
Also add a hide object code for the shadows on the HUD.

--- a/Data/Sys/GameSettings/RMG.ini
+++ b/Data/Sys/GameSettings/RMG.ini
@@ -24,7 +24,7 @@ EFBAccessEnable = True
 CameraPitch = 25.000000
 UnitsPerMetre = 100.000000
 HudDistance = 5.000000
-CanReadCameraAngles = True
+CanReadCameraAngles = False
 CameraForward = 1.000000
 ScreenDistance = 2.000000
 VRStateId = 3
@@ -49,3 +49,5 @@ $Remove EFB Copy Box 7
 128bits:0x43F0000042E40000:0xBF80000000000000
 $Remove EFB Copy Box 8
 128bits:0x43F0000043640000:0xBF80000000000000
+$Shadows on HUD
+128bits:0x0000000000000000:0x0000000003400000
