--- a/Data/Sys/GameSettings/RPW.ini
+++ b/Data/Sys/GameSettings/RPW.ini
@@ -28,3 +28,19 @@ PH_ZFar =
 [Video_Hacks]
 EFBToTextureEnable = False
 EFBCopyEnable = True
+
+[HideObjectCodes]
+$Main EFB copy
+128bits:0x0000000000000000:0x0000000000000000
+$EFB 2
+32bits:0x0000000000000000:0x000000003ACCCCCD
+$EFB 3
+32bits:0x0000000000000000:0x00000000BACCCCCD
+$EFB 4
+128bits:0x000000003B124925:0x0000000000000000
+
+[VR]
+UnitsPerMetre = 1.0
+ReadPitch = 90.0000000
+VRStateId = 3
+VRIssues = use hide object codes, inverted shadows, culling
