No More Heroes default settings. Improves issue #68.

--- a/Data/Sys/GameSettings/RNH.ini
+++ b/Data/Sys/GameSettings/RNH.ini
@@ -16,3 +16,16 @@ EmulationIssues = Small graphical glitch with light saber (light stays at the sa
 
 [ActionReplay]
 # Add action replay cheats here.
+
+[HideObjectCodes]
+$Main EFB
+128bits:0x0000000000000000:0x0000000000000000
+$Small EFB
+128bits:0x0000000000000000:0xFFFFFFFF00000000
+
+[VR]
+UnitsPerMetre = 10.0
+CanReadCameraAngles = True
+ScreenUp = -0.2
+VRStateId = 3
+VRIssues = use hide object codes, mild culling, some effects on HUD
