No More Heroes 2 default settings. Fixes issue #68.

--- a/Data/Sys/GameSettings/RUY.ini
+++ b/Data/Sys/GameSettings/RUY.ini
@@ -17,3 +17,24 @@ EmulationIssues = Small graphical glitch with light saber (light stays at the sa
 [ActionReplay]
 # Add action replay cheats here.
 
+[HideObjectCodes]
+$main efb
+128bits:0x0000000000000000:0x0000000000000000
+$small efb
+128bits:0x0000000000000000:0xFFFFFFFF00000000
+$white box
+128bits:0x0000000000000000:0xFFFFFFFF44200000
+$black box
+128bits:0x0000000000000000:0x000000FF44200000
+$light blue efb
+128bits:0x0000000000000000:0x0069FFA500000000
+$top left efb
+128bits:0x3FC000003FC00000:0xFFFFFF3F00000000
+
+[VR]
+UnitsPerMetre = 10.0
+HudOnTop = True
+ScreenHeight = 1.8
+ScreenUp = -0.2
+VRStateId = 3
+VRIssues = use hide object codes, disable minimap in game menu, culling, camera angles
