IBEsmonde's Super Smash Bros. Brawl (USA) unrestricted pause camera AR code
https://dm.reddit.com/r/Vive/comments/4prtxv/dolphin_vr_50/d4o5rgy

--- a/Data/Sys/GameSettings/RSBE01.ini
+++ b/Data/Sys/GameSettings/RSBE01.ini
@@ -143,3 +143,6 @@ BFA10014 7CDF3378
 [ActionReplay]
 $120FPS Hack (Use AudioSlowDown 2, Framelimit 120fps)
 04708D20 3F000000
+$Unrestricted Pause Camera
+040A7D60 4E800020
+04109D88 38800001
