Separate Oculus SDK out so it can only be accessed from VR.cpp, VRD3D.cpp, and VROGL.cpp.

--- a/Source/Core/VideoCommon/VR.vcxproj
+++ b/Source/Core/VideoCommon/VR.vcxproj
@@ -81,6 +81,7 @@
     <ClInclude Include="..\DolphinWX\HideObjectAddEdit.h" />
     <ClInclude Include="..\DolphinWX\ISOProperties.h" />
     <ClInclude Include="VRGameMatrices.h" />
+    <ClInclude Include="VROculus.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="$(ExternalsDir)libpng\png\png.vcxproj">
