Separate OpenVR SDK out so it can only be accessed from VR.cpp, VRD3D.cpp, VROGL.cpp, and AvatarDrawer.cpp.

--- a/Source/Core/VideoCommon/VR.vcxproj
+++ b/Source/Core/VideoCommon/VR.vcxproj
@@ -82,6 +82,7 @@
     <ClInclude Include="..\DolphinWX\ISOProperties.h" />
     <ClInclude Include="VRGameMatrices.h" />
     <ClInclude Include="VROculus.h" />
+    <ClInclude Include="VROpenVR.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="$(ExternalsDir)libpng\png\png.vcxproj">
