Tom Clancy's Splinter Cell is still unplayable, but here are the settings.

--- a/Data/Sys/GameSettings/GCE.ini
+++ b/Data/Sys/GameSettings/GCE.ini
@@ -8,3 +8,20 @@ EmulationIssues = Needs real xfb for the videos to display.
 [Video_Settings]
 UseXFB = True
 UseRealXFB = True
+
+[HideObjectCodes]
+$EFB copy
+128bits:0x0000000000000000:0x0000000044200000
+$grey 1
+88bits:0x0000000000000000:0x0000000000C3F9FE
+
+[VR]
+UnitsPerMetre = 100.0
+HudOnTop = True
+ScreenHeight = 0.8
+ScreenDistance = 1.0
+ScreenUp = -0.15
+ReadPitch = 90.0
+VRStateId = 1
+VRIssues = too much garbage in your view, invisible movies
+
