The Simpsons: Hit and Run default settings

--- a/Data/Sys/GameSettings/GHQ.ini
+++ b/Data/Sys/GameSettings/GHQ.ini
@@ -21,3 +21,16 @@ EmulationIssues =
 UseXFB = True
 UseRealXFB = False
 
+[Video_Settings_VR]
+UseXFB = False
+
+[HideObjectCodes]
+$letterbox top
+128bits:0x000000003F440001:0x00000000000000FF
+$letterbox bottom
+128bits:0x0000000000000000:0x00000000000000FF
+
+[VR]
+UnitsPerMetre = 1.0
+VRStateId = 4
+VRIssues = 
