--- a/Source/Core/VideoBackends/Vulkan/Vulkan.vcxproj
+++ b/Source/Core/VideoBackends/Vulkan/Vulkan.vcxproj
@@ -56,6 +56,7 @@
     <ClCompile Include="PaletteTextureConverter.cpp" />
     <ClCompile Include="RasterFont.cpp" />
     <ClCompile Include="SharedShaderCache.cpp" />
+    <ClCompile Include="StagingTexture2D.cpp" />
     <ClCompile Include="TextureEncoder.cpp" />
     <ClCompile Include="Util.cpp" />
     <ClCompile Include="VertexFormat.cpp" />
@@ -78,6 +79,7 @@
     <ClInclude Include="PaletteTextureConverter.h" />
     <ClInclude Include="RasterFont.h" />
     <ClInclude Include="SharedShaderCache.h" />
+    <ClInclude Include="StagingTexture2D.h" />
     <ClInclude Include="TextureEncoder.h" />
     <ClInclude Include="Util.h" />
     <ClInclude Include="VertexFormat.h" />
