Vulkan: Add frame timer (TODO Move this to common)

--- a/Source/Core/VideoBackends/Vulkan/CMakeLists.txt
+++ b/Source/Core/VideoBackends/Vulkan/CMakeLists.txt
@@ -3,6 +3,7 @@ set(SRCS
 	CommandBufferManager.cpp
 	EFBCache.cpp
 	FramebufferManager.cpp
+	FrameTimer.cpp
 	Helpers.cpp
 	ObjectCache.cpp
 	PaletteTextureConverter.cpp
