Add md5 testing to netplay
Allows to test current game, an arbitrary game or the sdcard of all players
at once.

--- a/Source/Core/Common/CMakeLists.txt
+++ b/Source/Core/Common/CMakeLists.txt
@@ -30,6 +30,7 @@ set(SRCS Analytics.cpp
          Version.cpp
          x64ABI.cpp
          x64Emitter.cpp
+         MD5.cpp
          Crypto/bn.cpp
          Crypto/ec.cpp
          Logging/LogManager.cpp)
