OpenBSD neither provides nor requires libdl and librt.

--- a/Source/Core/Common/CMakeLists.txt
+++ b/Source/Core/Common/CMakeLists.txt
@@ -93,7 +93,7 @@ elseif(USE_X11)
     set(LIBS ${LIBS} ${XRANDR_LIBRARIES})
 endif()
 
-if(NOT CMAKE_SYSTEM_NAME MATCHES FreeBSD)
+if(NOT CMAKE_SYSTEM_NAME MATCHES FreeBSD AND NOT CMAKE_SYSTEM_NAME MATCHES OpenBSD)
 	set(LIBS ${LIBS} dl)
 endif()
 
