--- a/Source/Core/DolphinWX/CMakeLists.txt
+++ b/Source/Core/DolphinWX/CMakeLists.txt
@@ -67,7 +67,7 @@ endif()
 
 set(WXLIBS ${wxWidgets_LIBRARIES})
 
-if(NOT CMAKE_SYSTEM_NAME MATCHES FreeBSD)
+if(NOT CMAKE_SYSTEM_NAME MATCHES FreeBSD AND NOT CMAKE_SYSTEM_NAME MATCHES OpenBSD)
 	set(WXLIBS ${WXLIBS} dl)
 endif()
 
