Vulkan: Add staging buffer helper class

--- a/Source/Core/VideoBackends/Vulkan/CMakeLists.txt
+++ b/Source/Core/VideoBackends/Vulkan/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SRCS
 	Renderer.cpp
 	ShaderCache.cpp
 	StateTracker.cpp
+    StagingBuffer.cpp
 	StagingTexture2D.cpp
 	StreamBuffer.cpp
 	SwapChain.cpp
