--- a/Source/Core/VideoBackends/Vulkan/CMakeLists.txt
+++ b/Source/Core/VideoBackends/Vulkan/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SRCS
 	Helpers.cpp
 	ObjectCache.cpp
 	PaletteTextureConverter.cpp
+    PerfQuery.cpp
 	RasterFont.cpp
 	Renderer.cpp
 	ShaderCache.cpp
