--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -329,7 +329,7 @@ if(APPLE)
 	find_library(COREAUDIO_LIBRARY CoreAudio)
 	find_library(COREFUND_LIBRARY CoreFoundation)
 	find_library(CORESERV_LIBRARY CoreServices)
-	find_library(FOUNDATION_LIBRARY foundation)
+	find_library(FOUNDATION_LIBRARY Foundation)
 	find_library(IOB_LIBRARY IOBluetooth)
 	find_library(IOK_LIBRARY IOKit)
 	find_library(QUICKTIME_LIBRARY QuickTime)
